전체 프로젝트 파일 추가

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,69 @@
-# Byte-compiled / optimized / DLL files
+# Python 캐시 파일
 __pycache__/
 *.py[cod]
 *$py.class
+.pytest_cache/
+*.so
+.Python
+
+# 가상환경
+venv/
+env/
+ENV/
+.env
+
+# 분포 관련 파일
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# 모델 체크포인트 및 로그
+*.pt
+*.pth
+*.bin
+*.model
+*.onnx
+*.mlmodel
+*.torchscript
+*.traced.pt
+*.log
+carrotpilot_finetuned_*/
+
+# VS Code
+.vscode/
+*.code-workspace
+
+# PyCharm
+.idea/
+*.iml
+*.iws
+.idea_modules/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# 데이터 및 데이터베이스 파일
+*.db
+*.sqlite3
+*.h5
+*.hdf5
+
+# Hugging Face 캐시
+.cache/
 
 # C extensions
 *.so
@@ -68,9 +130,6 @@ docs/_build/
 # PyBuilder
 target/
 
-# Jupyter Notebook
-.ipynb_checkpoints
-
 # IPython
 profile_default/
 ipython_config.py
@@ -83,15 +142,6 @@ celerybeat-schedule
 
 # SageMath parsed files
 *.sage.py
-
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
 
 # Spyder project settings
 .spyderproject
